Fix ship placement screen layout shifts

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -11,6 +11,13 @@
   font-size: 2rem;
   font-weight: 900;
 
+  &:disabled {
+    cursor: not-allowed;
+    background: linear-gradient(#d3d3d3, #a9a9a9);
+    color: #4a4a4a;
+    opacity: 0.6;
+  }
+
   &-wide {
     padding: 1rem 2rem;
   }
